--- a/Oct_1st_2022.md
+++ b/Oct_1st_2022.md
@@ -1,4 +1,4 @@
-# A brief, Oct 1st 2022，the first day of October
+## A brief, Oct 1st 2022，the first day of October
 
 *Chengdu's temperature went up. Playing basketball.*
 
